[package]
name = "leaprs"
version = "0.2.2"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Safe wrapper for the LeapC Ultraleap (Leap Motion) hand tracking device API."
readme = "README.md"
repository = "https://github.com/plule/leaprs"
license = "MIT OR Apache-2.0"
categories = [
    "api-bindings",
    "game-development",
    "computer-vision",
    "hardware-support",
]
keywords = ["leapc", "leap", "ultraleap", "hand"]
exclude = ["images/"]

[features]
default = ["gemini"]
gemini = []
glam = ["dep:glam"]
nalgebra = ["dep:nalgebra"]

[dependencies]
leap-sys = "0.2"
num_enum = "0.7.3"
thiserror = "1"
bitflags = "2"
derive_deref = "1.1.1"
glam = { version = "0.29", optional = true }
nalgebra = { version = "0.33", optional = true }

[dev-dependencies]
throbber = "0.1"
image = "0.25.2"
tempfile = "3.12.0"

[package.metadata.docs.rs]
features = ["glam", "nalgebra"]
